--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"lucide-react": "^0.269.0",
+		"moment-timezone": "^0.5.43",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^1.14.0",
